# MCP-Factory

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: rest.py  websocket.py
backend/app/codegen/: client_config_generator.py  code_block_generator.py  generator.py  package_renamer.py  placeholder_replacer.py  prompt_code_generator.py  prompts.py  readme_generator.py  resource_code_generator.py  template_copier.py  test_generator.py  tool_code_generator.py  validator.py  zip_packager.py
backend/app/engine/: architect.py  clarifier.py  orchestrator.py  understanding.py
backend/app/engine/prompts/: architecture.py  clarification.py  context_builder.py  system_base.py  understanding.py
backend/app/models/: architecture.py  messages.py  requirements.py  session.py
backend/app/services/: deployment_manager.py  github_pusher.py  llm_client.py  session_manager.py  template_loader.py
backend/app/utils/: json_parser.py
frontend/: package-lock.json
frontend/src/: App.css  (+2 more)
templates/: TEMPLATE_MANIFEST.json
templates/python/: .env.example  .gitignore  Dockerfile  mcp-client-config.json  pyproject.toml
templates/python/src/mcp_server_template/: __init__.py  __main__.py  server.py
templates/python/src/mcp_server_template/prompts/: __init__.py
templates/python/src/mcp_server_template/resources/: __init__.py
templates/python/src/mcp_server_template/tools/: __init__.py
templates/python/src/mcp_server_template/utils/: __init__.py  store.py  validation.py
templates/python/tests/: test_tools.py
(+31 files in other folders)
